src/styles/_widget.scss
.widget {
  display: inline-block;
  position: relative;
  min-width: 100px;
  width: 100%;
  min-height: 100px;
  margin: 10px 0;
  border-radius: 10px;
  padding: 20px;
  background-color: rgba(#000, 0.2);
  backdrop-filter: blur(10px);
  box-shadow: 0 3px 5px rgba(#000, 0.1);
  overflow: hidden;
  color: #fff;
  h2, h3 {
    margin-top: 0;
  }
  a {
    color: #fff;
  }
}

.widget-header {
  position: absolute;
  top: 5px;
  left: 0;
  width: 100%;
  z-index: 100;
  display: flex;
  justify-content: space-between;
  padding: 0 5px;
}

.widget-header-control {
  opacity: 0;
  visibility: hidden;
  transition-property: opacity, visibility;
  transition-duration: 250ms;
  transition-timing-function: ease-in-out;
  .widget:hover & {
    opacity: 0.5;
    visibility: visible;
  }
}

.widget-drag-handle {
  cursor: grab;
  &:active {
    cursor: grabbing;
  }
}

.widget-settings-open .widget-settings-toggle,
.widget-settings-open:hover .widget-settings-toggle {
  opacity: 1;
  visibility: visible;
}

.widget-loading {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

